--- a/src/main/resources/templates/login/joinForm.html
+++ b/src/main/resources/templates/login/joinForm.html
@@ -15,8 +15,8 @@
         <input type="password" id="member_password" th:field="*{member_password}"></input>
         <label for="member_password_check">Password Check</label>
         <input type="password" id="member_password_check" th:field="*{member_password_check}"></input>
-        <label for="member_name">이름</label>
-        <input type="text" id="member_name" th:field="*{member_name}"></input>
+        <label for="memberName">이름</label>
+        <input type="text" id="memberName" th:field="*{memberName}"></input>
         <button type="submit">가입 완료</button>
         <button><a href="javascript:void(0);" th:href="@{/login}">취소</a></button>
     </form>
